--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,17 @@
-<%- include('partials/header'); -%>
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
-
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/5063b1f023.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css" >
+    <title>Hello, world!</title>
+</head>
+<body>
 <div class = "left-body">
     <div class="left-navbar">
         <a href="#" class="btn btn-primary btn-lg active left-navbar-button" role="button" aria-pressed="true">Home</a>
@@ -19,9 +29,9 @@
 <div class = "mid-body">
     <div class="top-header">
         <div class="fixed-home-directive">
-            <nav class="navbar bg-light">
-                <span class="navbar-brand mb-0 h1"><h3 class="ml-auto">Home</h3></span>
-            </nav>
+    <nav class="navbar bg-light">
+        <span class="navbar-brand mb-0 h1"><h3 class="ml-auto">Home</h3></span>
+    </nav>
         </div>
         <div class="top-header-write">
             <img src="images/profile-pic.jpeg" class="prfile-icon" alt="...">
@@ -130,5 +140,15 @@
         <span><i class="far fa-bell"></i></span>
     </div>
 </div>
+<!-- Optional JavaScript; choose one of the two! -->
 
-<%- include('partials/footer'); -%>
+<!-- Option 1: Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
+<!-- Option 2: Separate Popper and Bootstrap JS -->
+<!--
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+-->
+</body>
+</html>
